--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>lessons</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<nav>
-		<ul>
-			<li>
-				<a href="">siaxle</a>
-			</li>
-			<li>
-				<a href="">siaxle</a>
-			</li>
-	
-		</ul>
-	</nav>
-	<section>test</section>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	<header>
+		<a class="logo" href="#">
+			<img src="https://www.popsci.com/sites/popsci.com/files/styles/1000_1x_/public/images/2018/08/nasa-logo-web-rgb.png?itok=Iczdwajo&fc=50,50" alt="logo">
+		</a>
+		<nav class="navigation">
+			<ul class="navigation-ul">
+				<li class="navigation-li">
+					<a href="#">მთავარი</a>
+				</li>
+				<li class="navigation-li">
+					<a class="active" href="#">სიახლეები</a>
+				</li>
+				<li class="navigation-li">
+					<a href="#">კონტაქტი</a>
+				</li>
+				<li class="navigation-li">
+					<a href="#">რამე</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<section>
+		<span class="date">27</span>
+		<p class="day">მაისი</p>
+	</section>
 </body>
 </html>
